# pdf-tools

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
log/: push-log.md
resources/: resources.qrc
src/: BookmarkWidget.cpp  BookmarkWidget.h  MainWindow.cpp  MainWindow.h  PdfView.cpp  PdfView.h  SearchWidget.cpp  SearchWidget.h  TocWidget.cpp  TocWidget.h  main.cpp
